Adição da parte de serviços

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
     <title>My Portfolio</title>
 </head>
+
 <body>
     <header class="header flex">
         <div class="name_symbol flex">
@@ -25,13 +29,53 @@
     <section id="home" class="home flex">
         <div class="home_page">
             <h2 class="lobby">Creating modern digital <br><span class="purple">experience</span></h2>
-            <p>Design, technology, and strategy for brands that want to stand out.</p>
-            <a class="btn" href="#">Start now</a>
-        </div>  
+            <p class="paragraph">Design, technology, and strategy for brands that want to stand out.</p>
+            <a class="btn start" href="#">Start now</a>
+        </div>
         <img class="lobby_img" src="img/image,_ecura2x.png" alt="My image">
     </section>
+    <section id="services" class="Services">
+        <div class="flex layout">
+            <div class="top_service">
+                <img class="img_service" src="img/icons8-html.png" alt="Image html">
+                <h3 class="title_service">HTML 5</h3>
+                <div class="on">
+                    <P class="about_services">Markup language used to structure web pages, organizing text, images, and
+                        components in a semantic and accessible way.</P>
+                </div>
+            </div>
 
+            <div class="top_service">
+                <img class="img_service" src="img/icons-css.png" alt="Image html">
+                <h3 class="title_service">CSS 3</h3>
+                <div class="on">
+                    <P class="about_services">Responsible for styling web pages, controlling colors, typography, layout,
+                        responsiveness, and animations, ensuring a consistent and pleasing visual interface.</P>
+                </div>
+            </div>
+
+            <div class="top_service">
+                <img class="img_service" src="img/icons8-javascript.png" alt="Image html">
+                <h3 class="title_service">JAVA-SCRIPT</h3>
+                <div class="on">
+                    <P class="about_services">A language responsible for adding interactivity to web pages, allowing
+                        manipulation of the DOM, validations, animations, events, and dynamic behaviors in the browser.
+                    </P>
+                </div>
+            </div>
+
+            <div class="top_service">
+                <img class="img_service" src="img/icons8-python.png" alt="Image html">
+                <h3 class="title_service">PYTHON</h3>
+                <div class="on">
+                    <P class="about_services">A versatile programming language used for automation, data analysis, and
+                        application development, with a focus on clean, readable, and efficient code.</P>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="script.js"></script>
 </body>
+
 </html>
