--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="home_page">
             <h2 class="lobby">Creating modern digital <br><span class="purple">experience</span></h2>
             <p class="paragraph">Design, technology, and strategy for brands that want to stand out.</p>
-            <a class="btn start" href="#">Start now</a>
+            <a class="start btn" href="#">Start now</a>
         </div>
         <img class="lobby_img" src="img/image,_ecura2x.png" alt="My image">
     </section>
@@ -67,7 +67,7 @@
             <div class="top_service">
                 <img class="img_service" src="img/icons8-python.png" alt="Image html">
                 <h3 class="title_service">PYTHON</h3>
-                <div class="on">
+                <div class="other">
                     <P class="about_services">A versatile programming language used for automation, data analysis, and
                         application development, with a focus on clean, readable, and efficient code.</P>
                 </div>
